<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.jzh.myapp.mvp.login.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/etUser"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="10dp"
        android:background="@drawable/shape_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/regster_user" />

    <EditText
        android:id="@+id/etPswd"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="10dp"
        android:background="@drawable/shape_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/regster_pswd" />

    <TextView
        android:id="@+id/tvRegster"
        android:layout_gravity="right"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_title_size"
        android:padding="5dp"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regster_enter" />

    <Button
        android:textColor="@color/white"
        android:background="@drawable/shape_edit"
        android:textSize="@dimen/btn_title_size"
        android:id="@+id/btnLogin"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_enter" />
</LinearLayout>
